--- a/back-office/templates/user/index.html.twig
+++ b/back-office/templates/user/index.html.twig
@@ -105,11 +105,30 @@
                     {% endfor %}
                 </div>
             </div>
-    </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-4">
+                <label class="me-1 form-check-label">
+                    <input type="checkbox" class="form-check-input" id="isTrustyWriter-input"
+                           data-checkbox="isTrustyWriter" data-action="change->user#onUniqueCheckboxChange"/>
+                    <span>Rédacteur validé</span>
+                </label>
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" id="isActive-input"
+                           data-checkbox="isActive" data-action="change->user#onUniqueCheckboxChange"/>
+                    <span>Actif</span>
+                </label>
+                <label class="me-1 form-check-label">
+                    <input type="checkbox" class="form-check-input" id="isBanned-input"
+                           data-checkbox="isBanned" data-action="change->user#onUniqueCheckboxChange"/>
+                    <span>Banni</span>
+                </label>
+            </div>
+        </div>
     {% block users %}
         <div id="users-block" data-controller="user" class="mb-3">
             <div class="count mb-2">
-                <span style="font-size: 1.1em">Total : </span><span class="badge bg-primary" style="font-size: 1em">40000</span>
+                <span style="font-size: 1.1em">Total : </span><span class="badge bg-primary" style="font-size: 1em">{{ users.getTotalItemCount }}</span>
             </div>
             <table class="table table-striped">
                 <thead class="table-dark">
@@ -166,6 +185,9 @@
                 {% endfor %}
                 </tbody>
             </table>
+            <div class="navigation">
+                {{ knp_pagination_render(users) }}
+            </div>
         </div>
     {% endblock %}
     <a href="{{ path('user_new') }}">Create new</a>
