--- a/back-office/templates/user/edit.html.twig
+++ b/back-office/templates/user/edit.html.twig
@@ -137,20 +137,16 @@
 {#        TODO#}
         <button type="button" class="btn btn-warning text-white">Réinitialiser le mot de passe</button>
     </div>
+    <div class="d-flex mt-4">
         {{ form_widget(form.submit,
             {'attr':
                 {
-                    'class': 'btn btn-primary'
+                    'class': 'btn btn-primary me-2'
                 }
             }
         ) }}
-
-    {{ form_end(form) }}
-    <div class="d-flex mt-4">
         <a href="{{ path('user_index') }}" class="btn btn-secondary me-2">Retour</a>
-        {{ include('user/_delete_form.html.twig') }}
+        <a href="{{ path('user_delete', {'id': user.getId()}) }}" class="btn btn-danger">Supprimer</a>
     </div>
-
-
-
+    {{ form_end(form) }}
 {% endblock %}
