Change mobile CSS from media query to 'mobile' class

--- a/frontend/src/css/gameMode.css
+++ b/frontend/src/css/gameMode.css
@@ -13,32 +13,50 @@
     background-color: #24BFF0;
 
     transition: background-color 0.15s ease-out;
-
-    height: 280px;
-    width: 280px;
     padding: 0;
 
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px;
 
     overflow: hidden;
 
     position: relative;
 }
 
+.game-mode:not(.mobile) {
+    height: 280px;
+    width: 280px;
+}
+
+.game-mode.mobile {
+    border: 3.5px solid #fff;
+    border-radius: 15px;
+    width: 400px;
+    height: auto;
+}
+
 .game-mode-disabled-mobile {
     display: none;
+}
+
+.game-mode.mobile .game-mode-disabled-mobile {
+    display: initial;
 }
 
 .game-mode-button-content {
     /*border: 3px solid red;*/
 
-    height: 100%;
-
     transition: transform 0.15s ease-out;
 }
 
-.game-mode:hover .game-mode-button-content {
+.game-mode:not(.mobile) .game-mode-button-content {
+    height: 100%;
+}
+
+.game-mode.mobile .game-mode-button-content {
+    display: flex;
+}
+
+.game-mode:not(.mobile):hover .game-mode-button-content {
     transform: translateY(-80%);
 }
 
@@ -79,11 +97,15 @@
 }
 
 .game-mode-label-mobile {
-    font-size: 1.4rem;
+    font-size: 2rem;
 
     margin-top: 10px;
 
     display: none;
+}
+
+.game-mode.mobile .game-mode-label-mobile {
+    display: block;
 }
 
 .game-mode-label-container {
@@ -93,6 +115,10 @@
     flex-direction: column;
 
     height: 100%;
+}
+
+.game-mode.mobile .game-mode-label-container {
+    align-self: center;
 }
 
 .game-mode-icon-container {
@@ -105,9 +131,21 @@
     justify-content: center;
 }
 
+.game-mode.mobile .game-mode-icon-container {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+}
+
 .game-mode-icon {
     max-width: 80%;
     max-height: 80%;
+}
+
+.game-mode.mobile .game-mode-icon {
+    max-width: 90%;
+    max-height: 90%;
 }
 
 .game-mode-label-desktop {
@@ -123,11 +161,19 @@
     justify-content: center;
 }
 
+.game-mode.mobile .game-mode-label-desktop {
+    display: none;
+}
+
 .game-mode-label-disabled-desktop {
     max-width: 30px;
     max-height: 30px;
 
     margin-left: 5px;
+}
+
+.game-mode.mobile .game-mode-label-disabled-desktop {
+    display: none;
 }
 
 .game-mode-description-container {
@@ -140,86 +186,111 @@
     justify-content: center;
 }
 
+.game-mode.mobile .game-mode-description-container {
+    width: 100%;
+
+    align-self: center;
+
+    margin-bottom: 10px;
+}
+
 .game-mode-description {
     font-size: 1.1rem;
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 10px;
+    /*margin-top: 10px;*/
+}
+
+.game-mode.mobile .game-mode-description {
+    font-size: 1rem;
+
+    text-align: left;
 }
 
 .game-mode:focus {
     outline: none;
 }
 
-@media screen and (max-width: 1280px) {
-    .game-mode-container {
-        flex-direction: column;
+@media screen and (max-width: 375px) {
+    .game-mode.mobile .game-mode-icon-container {
+        width: 50px;
+        height: 50px;
     }
 
-    .game-mode {
-        border: 3.5px solid #fff;
-
-        width: 100%;
-        height: auto;
-
-        border-radius: 15px;
-    }
-
-    .game-mode:not(.disabled):hover {
-        background-color: #DC71C7;
-    }
-
-    .game-mode-disabled-mobile {
-        display: initial;
-    }
-
-    .game-mode-label-mobile {
-        display: block;
-    }
-
-    .game-mode-button-content {
-        display: flex;
-    }
-
-    .game-mode:hover .game-mode-button-content {
-        transform: none;
-    }
-
-    .game-mode-label-container {
-        align-self: center;
-    }
-
-    .game-mode-label-disabled-desktop {
-        display: none;
-    }
-
-    .game-mode-icon-container {
-        width: 80px;
-        height: 80px;
-        margin-bottom: 10px;
-        margin-left: 10px;
-    }
-
-    .game-mode-icon {
-        max-width: 90%;
-        max-height: 90%;
-    }
-
-    .game-mode-label-desktop {
-        display: none;
-    }
-
-    .game-mode-description-container {
-        width: 100%;
-
-        align-self: center;
-
-        margin-bottom: 10px;
-    }
-
-    .game-mode-description {
-        font-size: 0.85rem;
-
-        text-align: left;
+    .game-mode.mobile .game-mode-description {
+        font-size: 0.9rem;
     }
 }
+
+/*@media screen and (max-width: 1280px) {*/
+/*    !*.game-mode-container {*!*/
+/*    !*    flex-direction: column;*!*/
+/*    !*}*!*/
+
+/*    .game-mode { !**!*/
+/*        border: 3.5px solid #fff;*/
+
+/*        width: 100%;*/
+/*        height: auto;*/
+
+/*        border-radius: 15px;*/
+/*    }*/
+
+/*    !*.game-mode:not(.disabled):hover {*!*/
+/*    !*    background-color: #DC71C7;*!*/
+/*    !*}*!*/
+
+/*    .game-mode-disabled-mobile { !**!*/
+/*        display: initial;*/
+/*    }*/
+
+/*    .game-mode-label-mobile { !**!*/
+/*        display: block;*/
+/*    }*/
+
+/*    .game-mode-button-content { !**!*/
+/*        display: flex;*/
+/*    }*/
+
+/*    .game-mode:hover .game-mode-button-content { !**!*/
+/*        transform: none;*/
+/*    }*/
+
+/*    .game-mode-label-container { !**!*/
+/*        align-self: center;*/
+/*    }*/
+
+/*    .game-mode-label-disabled-desktop { !**!*/
+/*        display: none;*/
+/*    }*/
+
+/*    .game-mode-icon-container { !**!*/
+/*        width: 80px;*/
+/*        height: 80px;*/
+/*        margin-bottom: 10px;*/
+/*        margin-left: 10px;*/
+/*    }*/
+
+/*    .game-mode-icon { !**!*/
+/*        max-width: 90%;*/
+/*        max-height: 90%;*/
+/*    }*/
+
+/*    .game-mode-label-desktop { !**!*/
+/*        display: none;*/
+/*    }*/
+
+/*    .game-mode-description-container { !**!*/
+/*        width: 100%;*/
+
+/*        align-self: center;*/
+
+/*        margin-bottom: 10px;*/
+/*    }*/
+
+/*    .game-mode-description { !**!*/
+/*        font-size: 0.85rem;*/
+
+/*        text-align: left;*/
+/*    }*/
+/*}*/
