--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,3 +1,8 @@
+:root {
+    --app-background-color: #23C5EF;
+    --element-primary-background-color: #24BFF0;
+}
+
 @font-face {
     font-family: "Coolvetica Rg";
     src: url("/webfonts/Coolvetica-Regular.woff2") format("woff2");
@@ -11,7 +16,7 @@
 body {
     position: relative;
 
-    background-color: #23C5EF;
+    background-color: var(--app-background-color);
     background-image: url("/img/background.png");
     background-repeat: repeat;
     min-height: 100vh;
@@ -171,7 +176,7 @@ a:hover {
 .footer-feedback-button {
     font-size: 1rem;
     background-color: #fff;
-    color: #24BFF0;
+    color: var(--element-primary-background-color);
     border: 2px solid #fff;
     border-radius: 1em;
     padding: 4px 25px;
@@ -181,7 +186,7 @@ a:hover {
 
 .footer-feedback-button:hover {
     cursor: pointer;
-    background-color: #24BFF0;
+    background-color: var(--element-primary-background-color);
     color: #fff;
 }
 
