--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -259,8 +259,8 @@
                         <td>{{ question.media|length > 0
                             ? '<i class="bi bi-check-lg text-success"></i>'
                             : '<i class="bi bi-x-lg text-danger"></i>' }}</td>
-                        <td>{{ question.createdAt ? question.createdAt|date('Y-m-d H:i:s', 'Europe/Paris') : '' }}</td>
-                        <td>{{ question.updatedAt ? question.updatedAt|date('Y-m-d H:i:s', 'Europe/Paris') : '' }}</td>
+                        <td>{{ question.createdAt ? question.createdAt|date('d-m-Y H:i:s', 'Europe/Paris') : '' }}</td>
+                        <td>{{ question.updatedAt ? question.updatedAt|date('d-m-Y H:i:s', 'Europe/Paris') : '' }}</td>
                         <td>
                             <a href="{{ path('question_show', {'id': question.id}) }}"
                                class="btn btn-sm btn-outline-primary mb-2"
