--- a/back-office/templates/user/index.html.twig
+++ b/back-office/templates/user/index.html.twig
@@ -163,8 +163,8 @@
                         <td>{{ user.isBanned
                             ? '<i class="bi bi-check-lg text-success"></i>'
                             : '<i class="bi bi-x-lg text-danger"></i>' }}</td>
-                        <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s', 'Europe/Paris') : '' }}</td>
-                        <td>{{ user.updatedAt ? user.updatedAt|date('Y-m-d H:i:s', 'Europe/Paris') : '' }}</td>
+                        <td>{{ user.createdAt ? user.createdAt|date('d-m-Y H:i:s', 'Europe/Paris') : '' }}</td>
+                        <td>{{ user.updatedAt ? user.updatedAt|date('d-m-Y H:i:s', 'Europe/Paris') : '' }}</td>
                         <td>
                             <a href="{{ path('user_show', {'id': user.id}) }}"
                                class="btn btn-sm btn-outline-primary mb-2"
