--- a/back-office/templates/user/new.html.twig
+++ b/back-office/templates/user/new.html.twig
@@ -3,9 +3,117 @@
 {% block title %}New User{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
-
-    {{ include('user/_form.html.twig') }}
-
-    <a href="{{ path('user_index') }}">back to list</a>
+    <div class="row">
+        <h1 class="h2">Ajouter un utilisateur</h1>
+        <hr>
+    </div>
+    {{ form_start(form) }}
+    <div class="row mb-3">
+        <div class="col-6">
+            <label for="user-username" class="form-label lead">Username</label>
+            {{ form_errors(form.username) }}
+            {{ form_widget(form.username,
+                {'attr':
+                    {
+                        'placeholder': 'Username',
+                        'class': 'form-control',
+                        'id': 'user-username',
+                    }
+                }
+            )}}
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            <label for="user-email" class="form-label lead">Email</label>
+            {{ form_errors(form.email) }}
+            {{ form_widget(form.email,
+                {'attr':
+                    {
+                        'placeholder': 'Email',
+                        'class': 'form-control',
+                        'id': 'user-email',
+                    }
+                }
+            )}}
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            <label for="user-password" class="form-label lead">Mot de passe</label>
+            {{ form_errors(form.password) }}
+            {{ form_widget(form.password,
+                {'attr':
+                    {
+                        'placeholder': 'Mot de passe',
+                        'class': 'form-control',
+                        'id': 'user-password',
+                    }
+                }
+            )}}
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-3">
+            <label for="user-plan" class="form-label lead">Plan</label>
+            {{ form_errors(form.plan) }}
+            {{ form_widget(form.plan,
+                {'attr':
+                    {
+                        'placeholder': 'Plan',
+                        'class': 'form-select',
+                        'id': 'user-plan',
+                    }
+                }
+            )}}
+        </div>
+        <div class="col-3">
+            <label for="user-role" class="form-label lead">Role</label>
+            {{ form_errors(form.role) }}
+            {{ form_widget(form.role,
+                {'attr':
+                    {
+                        'placeholder': 'Role',
+                        'class': 'form-select',
+                        'id': 'user-role',
+                    }
+                }
+            )}}
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            {{ form_errors(form.isTrustyWriter) }}
+            {{ form_errors(form.isActive) }}
+            {{ form_widget(form.isTrustyWriter,
+                {'attr':
+                    {
+                        'class': 'form-check-input me-1',
+                        'id': 'user-isTrustyWriter',
+                    }
+                }
+            )}}
+            {{ form_label(form.isTrustyWriter, 'Rédacteur validé', {'label_attr': {'class': 'form-check-label me-2'}}) }}
+            {{ form_widget(form.isActive,
+                {'attr':
+                    {
+                        'class': 'form-check-input me-1',
+                        'id': 'user-isActive',
+                    }
+                }
+            )}}
+            {{ form_label(form.isActive, 'Actif', {'label_attr': {'class': 'form-check-label'}}) }}
+        </div>
+    </div>
+    <div class="d-flex mt-4">
+        {{ form_widget(form.submit,
+            {'attr':
+                {
+                    'class': 'btn btn-primary me-2'
+                }
+            }
+        ) }}
+        <a href="{{ path('user_index') }}" class="btn btn-secondary me-2">Retour</a>
+    </div>
+    {{ form_end(form) }}
 {% endblock %}
