Change button to add new user or question from the index view

--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -286,9 +286,5 @@
             </div>
         </div>
     {% endblock %}
-    <a href="{{ path('question_new') }}"
-       class="btn btn-primary"
-    >
-        Ajouter
-    </a>
+    <a href="{{ path('question_new') }}" class="btn btn-primary">Ajouter</a>
 {% endblock %}
