--- a/back-office/templates/user/index.html.twig
+++ b/back-office/templates/user/index.html.twig
@@ -190,5 +190,5 @@
             </div>
         </div>
     {% endblock %}
-    <a href="{{ path('user_new') }}">Create new</a>
+        <a href="{{ path('user_new') }}" class="btn btn-primary">Ajouter</a>
 {% endblock %}
