--- a/back-office/templates/question/edit.html.twig
+++ b/back-office/templates/question/edit.html.twig
@@ -244,7 +244,13 @@
         <div class="d-flex mt-4">
             <button type="submit" class="btn btn-primary me-2">Envoyer</button>
             <a href="{{ path('question_index') }}" class="btn btn-secondary me-2">Retour</a>
-            <a href="{{ path('question_delete', {'id': question.getId()}) }}" class="btn btn-danger">Supprimer</a>
+            <button class="btn btn-danger"
+                    data-uuid="{{ question.getId() }}"
+                    data-controller="question"
+                    data-action="question#deleteQuestion"
+            >
+                Supprimer
+            </button>
         </div>
     </form>
 
