--- a/back-office/templates/question_type/index.html.twig
+++ b/back-office/templates/question_type/index.html.twig
@@ -3,41 +3,92 @@
 {% block title %}QuestionType index{% endblock %}
 
 {% block body %}
-    <h1>QuestionType index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Label</th>
-                <th>Ischild</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for question_type in question_types %}
-            <tr>
-                <td>{{ question_type.id }}</td>
-                <td>{{ question_type.name }}</td>
-                <td>{{ question_type.label }}</td>
-                <td>{{ question_type.ischild ? 'Yes' : 'No' }}</td>
-                <td>{{ question_type.createdAt ? question_type.createdAt|date('Y-m-d H:i:s T') : '' }}</td>
-                <td>{{ question_type.updatedAt ? question_type.updatedAt|date('Y-m-d H:i:s T') : '' }}</td>
-                <td>
-                    <a href="{{ path('question_type_show', {'id': question_type.id}) }}">show</a>
-                    <a href="{{ path('question_type_edit', {'id': question_type.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="row">
+        <h1 class="h2">Types de question</h1>
+        <hr>
+    </div>
+    <div data-controller="questionType">
+        <div class="row mb-3">
+            <div class="col-3">
+                <input type="text"
+                       data-input="uuid"
+                       id="uuid-input"
+                       data-action="questionType#onInput"
+                       placeholder="UUID"
+                       class="form-control"/>
+            </div>
+            <div class="col-3">
+                <input type="text"
+                       data-input="search"
+                       id="search-input"
+                       data-action="questionType#onInput"
+                       placeholder="Nom ou label"
+                       class="form-control"/>
+            </div>
+        </div>
+        <div class="row mb-3">
+            <div class="col-2">
+                <label class="form-check-label">
+                    <input type="checkbox" class="form-check-input" id="isChild-input"
+                           data-checkbox="isChild" data-action="change->questionType#onUniqueCheckboxChange"/>
+                    <span>Type enfant</span>
+                </label>
+            </div>
+        </div>
+    </div>
+    {% block questionTypes %}
+        <div id="questionTypes-block" data-controller="questionType" class="mb-3">
+{#            <div class="count mb-2">#}
+{#                <span style="font-size: 1.1em">Total : </span><span class="badge bg-primary" style="font-size: 1em">{{ questions.getTotalItemCount }}</span>#}
+{#            </div>#}
+            <table  class="table table-striped">
+                <thead class="table-dark">
+                    <tr>
+                        <th>Uuid</th>
+                        <th>Nom</th>
+                        <th>Label</th>
+                        <th>Type enfant</th>
+                        <th>Crée le</th>
+                        <th>Modifié le</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for questionType in questionTypes %}
+                    <tr>
+                        <td>{{ questionType.getId() }}</td>
+                        <td>{{ questionType.getName() }}</td>
+                        <td>{{ questionType.getLabel() }}</td>
+                        <td>{{ questionType.getIsChild()
+                            ? '<i class="bi bi-check-lg text-success"></i>'
+                            : '<i class="bi bi-x-lg text-danger"></i>'}}</td>
+                        <td>{{ questionType.getCreatedAt() ? questionType.getCreatedAt()|date('d-m-Y H:i:s', 'Europe/Paris') : '' }}</td>
+                        <td>{{ questionType.getUpdatedAt() ? questionType.getUpdatedAt()|date('d-m-Y H:i:s', 'Europe/Paris') : '' }}</td>
+                        <td style="display: flex; flex-direction: column">
+                            <a href="{{ path('question_type_show', {'id': questionType.id}) }}"
+                               class="btn btn-sm btn-outline-primary mb-2"
+                            >
+                                Afficher
+                            </a>
+                            <a href="{{ path('question_type_edit', {'id': questionType.id}) }}"
+                               class="btn btn-sm btn-outline-primary"
+                            >
+                                Modifier
+                            </a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="7">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+{#            <div class="navigation">#}
+{#                {{ knp_pagination_render(questions) }}#}
+{#            </div#}
+        </div>
+    {% endblock %}
 
     <a href="{{ path('question_type_new') }}">Create new</a>
 {% endblock %}
